Fix: Project title having a higher z-index than header menu

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -8,6 +8,7 @@
   top: 0;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background-color: $background-color;
+  z-index: 10;
 
   &__logo {
     color: white;
