--- a/src/styles/components/_segment.scss
+++ b/src/styles/components/_segment.scss
@@ -14,11 +14,8 @@
   &__title {
     color: $title-color;
     font-size: 2.5rem;
-    // margin-top: -55px;
-    // margin-bottom: 0;
     margin: -55px 1.5rem 0;
     position: absolute;
-    z-index: 5;
   }
 
   &__background,
